# fuel_monitoring_system

./: .env  .gitignore  Makefile  domain_model.puml  fuel_monitoring_system.kdev4  index.html  package-lock.json  package.json  pnpm-lock.yaml  some.sh  text.txt  tsconfig.json
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/docs/: HAD_v1.puml  HUD_v2.puml  domain_model.puml
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/core_lib/: mod.rs
src-tauri/src/api/core_lib/db/: connection.rs  mod.rs
src-tauri/src/api/corrections/: mod.rs
src-tauri/src/api/corrections/application/: handlers.rs  mod.rs  service.rs
src-tauri/src/api/corrections/domain/: correction.rs  mod.rs
src-tauri/src/api/corrections/infrastructure/: height_correction_schema.rs  mod.rs  repository.rs
src-tauri/src/api/densities/: mod.rs
src-tauri/src/api/densities/application/: handlers.rs  mod.rs  service.rs
src-tauri/src/api/densities/domain/: density_coefficient.rs  density_meta.rs  mod.rs
src-tauri/src/api/densities/infrastructure/: density_coefficient.rs  density_coefficient_schema.rs  mod.rs  repository.rs
src-tauri/src/api/differences/: mod.rs
src-tauri/src/api/differences/application/: daily_differences_service.rs  differences_service.rs  handlers.rs  mod.rs
src-tauri/src/api/differences/application/validators/: add_difference.rs  get_differences.rs  mod.rs
src-tauri/src/api/differences/domain/: daily_difference.rs  difference.rs  difference_domain.rs  mod.rs
src-tauri/src/api/differences/infrastructure/: daily_difference_schema.rs  daily_differences_repository.rs  difference.rs  difference_schema.rs  differences_repository.rs  mod.rs  repository.rs
src-tauri/src/api/fms_core/: mod.rs
src-tauri/src/api/fms_core/db/: connection.rs  mod.rs
src-tauri/src/api/fms_core/domain/: abstract_model.rs  mod.rs
src-tauri/src/api/fms_core/infrastructure/: base_repository.rs  mod.rs
src-tauri/src/api/profiles/: mod.rs
src-tauri/src/api/profiles/application/: handlers.rs  mod.rs  service.rs  tank_profiles_service.rs
src-tauri/src/api/profiles/domain/: mod.rs  profile_meta.rs  tank_profile.rs
src-tauri/src/api/profiles/infrastructure/: mod.rs  profile_schema.rs  repository.rs  tank_profile.rs
src-tauri/src/api/tankers/: handlers.rs  mod.rs
src-tauri/src/api/tanks/: mod.rs
src-tauri/src/api/tanks/application/: handlers.rs  mod.rs  service.rs  tank_profiles_service.rs
src-tauri/src/api/tanks/domain/: mod.rs  tank.rs
src-tauri/src/api/tanks/domain/enums/: gas_type.rs  (+1 more)
src-tauri/src/api/tanks/infrastructure/: mod.rs  model.rs  repository.rs  tank.rs  tank_schema.rs  tanks_repository.rs
src-tauri/src/api/vessels/: mod.rs
src-tauri/src/api/vessels/application/: handlers.rs  mod.rs  service.rs
src-tauri/src/api/vessels/domain/: mod.rs  vessel.rs
src-tauri/src/api/vessels/infrastructure/: mod.rs  repository.rs  vessel.rs  vessel_repository.rs  vessel_schema.rs
src-tauri/src/tanks/: mod.rs
src-tauri/src/tanks/application/: handlers.rs
(+108 files in other folders)
