[package]
name = "fuel_monitoring_system"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
uuid = {version = "1.4"}
tauri = { version = "1.4", features = [ "fs-create-dir", "fs-read-file", "fs-read-dir", "fs-exists", "fs-write-file", "http-all", "shell-open", "devtools", "http-multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
csv = { version = "*"}
chrono = {version = "0.4.26", features = ["serde", "rustc-serialize"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
